# ocaml-spectrum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGES  LICENSE  Makefile  README.md  RELEASE.md  _ast.ml  _example.ml  dune-project  junit-convert.xml  junit-lexer.xml  junit-parser.xml  junit-printer.xml  junit-query.xml  junit-terminal.xml  spectrum.opam  spectrum.opam.template  spectrum_capabilities.opam  spectrum_palette.opam  spectrum_palette_ppx.opam  spectrum_palettes.opam  spectrum_tools.opam
.github/: copilot-instructions.md  release.yml  test.yml
.github/workflows/: detect-release.yml  docs.yml  release.yml  test.yml
_notes/: TODO.md  downsample-nearest-color-resume-plan.md  downsample-nearest-color-status.md
_readme/: generate_swatch.py
doc/: DEVELOP.md  color_quantization.mld  custom_palettes.mld  dune  getting_started.mld  index.mld  spectrum.mld  spectrum_capabilities.mld  spectrum_palette_ppx.mld  spectrum_palettes.mld  spectrum_tools.mld
doc/spectrum_capabilities/: dune  index.mld
doc/spectrum_palette_ppx/: dune  index.mld
doc/spectrum_palettes/: dune  index.mld
doc/spectrum_tools/: dune  index.mld
docs/: DEVELOP.md
lib/: capabilities.ml  dune  lexer.mll  printer.ml  printer.mli  spectrum.ml
lib/octree/: README.md  dune
lib/spectrum/: capabilities.ml  capabilities.mli  dune  lexer.mll  palettes.ml  parser.ml  spectrum.ml  spectrum.mli  spectrum_intf.ml
lib/spectrum/test/: dune  test_capabilities.ml  test_lexer.ml  test_parser.ml  test_printer.ml  test_properties.ml  test_serializers.ml  test_stag.ml
lib/spectrum_capabilities/: capabilities.mli  dune  spectrum_capabilities.ml
lib/spectrum_capabilities/test/: dune  test_capabilities.ml
lib/spectrum_palette/: 256-colors.json  dune  loader.ml  palette.ml  spectrum_palette.ml  utils.ml
lib/spectrum_palette_ppx/: dune  expander.ml  loader.ml  palette.ml  palette.mli  spectrum_palette.ml  spectrum_palette_ppx.ml
lib/spectrum_palette_ppx/test/: dune  test_loader.ml  test_palette.ml  test_utils.ml
lib/spectrum_palettes/: 16-colors.json  dune  terminal.ml
lib/spectrum_palettes/test/: dune  test_terminal.ml
lib/spectrum_tools/: 256-colors.json  README.md  convert.ml  convert.mli  defs.ml  dune  octree.ml  query.ml  query.mli  spectrum_tools.ml  utils.ml
lib/spectrum_tools/test/: dune  test_convert.ml  test_properties.ml  test_query.ml  test_utils.ml
lib/test_helpers/: dune  test_runner.ml
notes/: downsample-nearest-color-resume-plan.md  downsample-nearest-color-status.md
tests/: capabilities.ml  conversion.ml  dune  lexer.ml  printer.ml  printing.ml
tools/gen_palette_docs/: dune  gen_palette_docs.ml
