(env
 (_
  (env-vars
   (FORCE_COLOR 3))))

(test
 (name test_loader)
 (modules test_loader)
 (libraries
  alcotest
  junit_alcotest
  test_runner
  spectrum_palette_ppx
  yojson
  color))

(test
 (name test_palette)
 (modules test_palette)
 (libraries alcotest junit_alcotest test_runner spectrum_palette_ppx color))

(test
 (name test_utils)
 (modules test_utils)
 (libraries alcotest junit_alcotest test_runner spectrum_palette_ppx))
