(env
 (_
  (env-vars
   (FORCE_COLOR 3))))

(test
 (name test_convert)
 (modules test_convert)
 (libraries alcotest junit_alcotest spectrum_tools color))

(test
 (name test_utils)
 (modules test_utils)
 (libraries alcotest junit_alcotest spectrum_tools color gg))

(test
 (name test_query)
 (modules test_query)
 (libraries alcotest junit_alcotest spectrum_tools))

(test
 (name test_properties)
 (modules test_properties)
 (libraries
  alcotest
  junit_alcotest
  qcheck-alcotest
  spectrum_tools
  spectrum_palettes
  color))
